# crispr-multiplex-optimizer

./: README.md  pyproject.toml
crispr_mux/: __init__.py  cli.py
docs/: PROJECT_DEFINITION.md  generate_pdf.py
web/: app.py
